--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,19 @@
+한국 도시 세트 beta0.9.0 (2025.11.29)
+-----------------------------------------
+* 오브젝트들을 새로운 NewGRF '한국도시세트 오브젝트' 로 분리
+* 그래픽 개선
+  - 마천루 (2010) 일부 커튼월 빌딩의 빛반사 그래픽 개선
+  - 저층 아파트 (1990) 물탱크 높이 높임, 나무 수 줄임
+  - 공원에 있는 나무를 적당한 수준으로 줄임
+* 코드 수정
+  - 한국도시세트 오브젝트에 트레이드 타워를 모델로 한 오브젝트가 생겼기 때문에, 기존 같은 모델이던 마천루 (1980)는 이제부터 당분간 비활성화됨; 기존 세이브에 있던 건물은 남아있되, 새로 등장하지 않음
+  - 한국도시세트 오브젝트에 도시건물이 오브젝트로 추가됐기 때문에, 1970, 1980년 건물들에 건설년도 제한을 추가함; 각각 2020년, 2030년부터 등장하지 않음
+* 버그 수정
+  - 오피스 (2000) 일부 그래픽 오류 고침
+  - 경찰서 이름이 소방서로 잘못 나와있던 것 고침
+
+
+
 한국 도시 세트 beta0.8.0 (2025.09.07)
 -----------------------------------------
 * 건물 추가
