--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+한국 도시 세트 beta0.10.0 (2025.12.14)
+* 건물 추가
+  - 초고층 주상복합 아파트 (2000, 모델: 타워팰리스 1차)
+* 코드 수정
+  - 아파트가 더 많아졌기 때문에, 아파트 단지 등장간격을 12칸에서 16칸으로 늘림(!새로 지어지는 아파트단지부터 적용됨!)
+
+
+
 한국 도시 세트 beta0.9.0 (2025.11.29)
 -----------------------------------------
 * 오브젝트들을 새로운 NewGRF '한국도시세트 오브젝트' 로 분리
